--- a/TextRank.ipynb
+++ b/TextRank.ipynb
@@ -27,7 +27,7 @@
     "id": "S8ie7JOiWOOs"
    },
    "source": [
-    "![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1b-sg2SfnlSLUReyNDVnqtfpYFI_jf3i0?usp=sharing)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1b-sg2SfnlSLUReyNDVnqtfpYFI_jf3i0?usp=sharing)\n",
     "# Техническая часть"
    ]
   },
